Fix content alignment to reduce blank space

--- a/styles/less/main.less
+++ b/styles/less/main.less
@@ -37,7 +37,7 @@ ul {
   width: 100vw;
   padding: 0;
   margin: 0;
-  display: flex;
+  display: block;
 }
 
 // NAVIGATION
